RESOLVED FIXED31613
Elements don't drop out of compositing layers when animation ends
https://bugs.webkit.org/show_bug.cgi?id=31613
Summary Elements don't drop out of compositing layers when animation ends
Simon Fraser (smfr)
Reported 2009-11-17 20:34:57 PST
Created attachment 43398 [details] Testcase In the attached testcase, the animating elements should drop out of compositing layers when the animation finishes. However, they don't.
Attachments
Testcase (1.24 KB, text/html)
2009-11-17 20:34 PST, Simon Fraser (smfr)
no flags
Patch (2.64 KB, patch)
2009-11-17 21:39 PST, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2009-11-17 20:35:39 PST
Simon Fraser (smfr)
Comment 2 2009-11-17 21:04:52 PST
This seems to happen because the 'mustOverlapCompositedLayers' flag gets stuck on the layer that was animated.
Simon Fraser (smfr)
Comment 3 2009-11-17 21:39:43 PST
Simon Fraser (smfr)
Comment 4 2009-11-18 07:03:02 PST
Note You need to log in before you can comment on or make changes to this bug.